force-app/main/default/objects/Lead/fields/LZU__c.field-meta.xml
<CustomField>
    <fullName>LZU__c</fullName>
    <label>XXXX Load Zone &amp; Utility</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>NEMA Eversource</fullName>
                
                
                    <label>NEMA Eversource</label>
                
                </value>
            
                <value>
                
                    <fullName>NEMA Municipal Electric Department</fullName>
                
                
                    <label>NEMA Municipal Electric Department</label>
                
                </value>
            
                <value>
                
                    <fullName>NEMA National Grid</fullName>
                
                
                    <label>NEMA National Grid</label>
                
                </value>
            
                <value>
                
                    <fullName>NEMA/SEMA Eversource</fullName>
                
                
                    <label>NEMA/SEMA Eversource</label>
                
                </value>
            
                <value>
                
                    <fullName>NEMA/WCMA Municipal Electric Department</fullName>
                
                
                    <label>NEMA/WCMA Municipal Electric Department</label>
                
                </value>
            
                <value>
                
                    <fullName>NEMA/WCMA National Grid</fullName>
                
                
                    <label>NEMA/WCMA National Grid</label>
                
                </value>
            
                <value>
                
                    <fullName>SEMA Eversource</fullName>
                
                
                    <label>SEMA Eversource</label>
                
                </value>
            
                <value>
                
                    <fullName>SEMA Municipal Electric Department</fullName>
                
                
                    <label>SEMA Municipal Electric Department</label>
                
                </value>
            
                <value>
                
                    <fullName>SEMA National Grid</fullName>
                
                
                    <label>SEMA National Grid</label>
                
                </value>
            
                <value>
                
                    <fullName>SEMA National Grid/Eversource</fullName>
                
                
                    <label>SEMA National Grid/Eversource</label>
                
                </value>
            
                <value>
                
                    <fullName>SEMA/WCMA National Grid</fullName>
                
                
                    <label>SEMA/WCMA National Grid</label>
                
                </value>
            
                <value>
                
                    <fullName>WCMA Eversource</fullName>
                
                
                    <label>WCMA Eversource</label>
                
                </value>
            
                <value>
                
                    <fullName>WCMA Eversource / Municipal Electric Department</fullName>
                
                
                    <label>WCMA Eversource / Municipal Electric Department</label>
                
                </value>
            
                <value>
                
                    <fullName>WCMA Municipal Electric Department</fullName>
                
                
                    <label>WCMA Municipal Electric Department</label>
                
                </value>
            
                <value>
                
                    <fullName>WCMA National Grid</fullName>
                
                
                    <label>WCMA National Grid</label>
                
                </value>
            
                <value>
                
                    <fullName>WCMA Unitil</fullName>
                
                
                    <label>WCMA Unitil</label>
                
                </value>
            
                <value>
                
                    <fullName>Manual Lookup Required</fullName>
                
                
                    <label>Manual Lookup Required</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>