force-app/main/default/objects/Lead/fields/MA_120_of_Median_Income__c.field-meta.xml
<CustomField>
    <fullName>MA_120_of_Median_Income__c</fullName>
    <description>This is 120% of the median income - used to define class I or class II Income Based loan support</description>
    <inlineHelpText>Hidden Field, used for calculation</inlineHelpText>
    <label>MA 120% of Median Income</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>