force-app/main/default/objects/Lead/fields/MA_Household_Median_Income__c.field-meta.xml
<CustomField>
    <fullName>MA_Household_Median_Income__c</fullName>
    <label>MA Household Median Income</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>