force-app/main/default/objects/Lead/fields/Manual_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Manual_Campaign_ID__c</fullName>
    <label>Manual Campaign Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>