force-app/main/default/objects/Lead/fields/Manual_Credit_Approval__c.field-meta.xml
<CustomField>
    <fullName>Manual_Credit_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Credit Approval</label>
    <type>Checkbox</type>
</CustomField>