force-app/main/default/objects/Lead/fields/Manual_Credit_Decline__c.field-meta.xml
<CustomField>
    <fullName>Manual_Credit_Decline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Credit Decline</label>
    <type>Checkbox</type>
</CustomField>