force-app/main/default/objects/Lead/fields/Manual_Waitlist__c.field-meta.xml
<CustomField>
    <fullName>Manual_Waitlist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Waitlist</label>
    <type>Checkbox</type>
</CustomField>