force-app/main/default/objects/Lead/fields/Module_Count__c.field-meta.xml
<CustomField>
    <fullName>Module_Count__c</fullName>
    <description>Collected in C&amp;I in-take form</description>
    <inlineHelpText>Collected in C&amp;I in-take form</inlineHelpText>
    <label>Module Count</label>
    <length>20</length>
    <type>Text</type>
</CustomField>