force-app/main/default/objects/Lead/fields/Module_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Module_Manufacturer__c</fullName>
    <description>Collected in C&amp;I in-take form</description>
    <inlineHelpText>Collected in C&amp;I in-take form</inlineHelpText>
    <label>Module Manufacturer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>