force-app/main/default/objects/Lead/fields/Module_Nameplate_Rating__c.field-meta.xml
<CustomField>
    <fullName>Module_Nameplate_Rating__c</fullName>
    <description>Collected in C&amp;I in-take form</description>
    <inlineHelpText>Collected in C&amp;I in-take form</inlineHelpText>
    <label>Module Nameplate Rating</label>
    <length>25</length>
    <type>Text</type>
</CustomField>