force-app/main/default/objects/Lead/fields/Moody_s_Risk_Calc__c.field-meta.xml
<CustomField>
    <fullName>Moody_s_Risk_Calc__c</fullName>
    <inlineHelpText>Score returned from Moody&apos;s Rrisk Calc engine</inlineHelpText>
    <label>Moody&apos;s Risk Calc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Moody_s_Ratings</valueSetName>
    </valueSet>
</CustomField>