force-app/main/default/objects/Lead/fields/More_than_five_years_industry_experience__c.field-meta.xml
<CustomField>
    <fullName>More_than_five_years_industry_experience__c</fullName>
    <label>More than five years industry experience</label>
    <length>5</length>
    <type>Text</type>
</CustomField>