force-app/main/default/objects/Lead/fields/Multiple_Utility_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Utility_Accounts__c</fullName>
    <label>Multiple Utility Accounts?</label>
    <length>7</length>
    <type>Text</type>
</CustomField>