force-app/main/default/objects/Lead/fields/New_File_Upload__c.field-meta.xml
<CustomField>
    <fullName>New_File_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Additional File Upload Form submittal from Form Assembly triggers this field</description>
    <label>New File Upload</label>
    <type>Checkbox</type>
</CustomField>