force-app/main/default/objects/Lead/fields/Newsletter_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Lead will receive newsletter</inlineHelpText>
    <label>Newsletter Opt-in</label>
    <type>Checkbox</type>
</CustomField>