force-app/main/default/objects/Lead/fields/No_Payment__c.field-meta.xml
<CustomField>
    <fullName>No_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>W-019782</description>
    <inlineHelpText>Default unchecked; checked if the likely-assigned SSS does not require payment information (e.g. UCB product). If checked, this lead CANNOT be put on a SSS that requires capture of payment info.</inlineHelpText>
    <label>Not Requesting Payment Info</label>
    <type>Checkbox</type>
</CustomField>