force-app/main/default/objects/Lead/fields/No_Veteran_Disability__c.field-meta.xml
<CustomField>
    <fullName>No_Veteran_Disability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox serves as the false value to the Veteran/Disability checkbox. It allows the CAP UI to show blank checkboxes without having to default to false.</description>
    <label>XXXNo Veteran/Disability</label>
    <type>Checkbox</type>
</CustomField>