force-app/main/default/objects/Lead/fields/Not_Retired__c.field-meta.xml
<CustomField>
    <fullName>Not_Retired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox serves as the false value to the Retired checkbox. It allows the CAP UI to show blank checkboxes without having to default to false.</description>
    <label>XXXNot Retired</label>
    <type>Checkbox</type>
</CustomField>