force-app/main/default/objects/Lead/fields/Number_of_Periods__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Periods__c</fullName>
    <defaultValue>120</defaultValue>
    <label>Number of Periods</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>