force-app/main/default/objects/Lead/fields/Objections__c.field-meta.xml
<CustomField>
    <fullName>Objections__c</fullName>
    <description>This field is used by Sales to convey why they think a lead wasn&apos;t interested in a product.</description>
    <inlineHelpText>This field is used by Sales to convey why they think a lead wasn&apos;t interested in a product.</inlineHelpText>
    <label>Objections</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Credit check</fullName>
                
                
                    <label>Credit check</label>
                
                </value>
            
                <value>
                
                    <fullName>Lack of savings</fullName>
                
                
                    <label>Lack of savings</label>
                
                </value>
            
                <value>
                
                    <fullName>Double bill</fullName>
                
                
                    <label>Double bill</label>
                
                </value>
            
                <value>
                
                    <fullName>Length of contract</fullName>
                
                
                    <label>Length of contract</label>
                
                </value>
            
                <value>
                
                    <fullName>Autopay</fullName>
                
                
                    <label>Autopay</label>
                
                </value>
            
                <value>
                
                    <fullName>Termination period</fullName>
                
                
                    <label>Termination period</label>
                
                </value>
            
                <value>
                
                    <fullName>Not convinced of env. benefits</fullName>
                
                
                    <label>Not convinced of env. benefits</label>
                
                </value>
            
                <value>
                
                    <fullName>Distrust/Misunderstanding</fullName>
                
                
                    <label>Distrust/Misunderstanding</label>
                
                </value>
            
                <value>
                
                    <fullName>Too busy</fullName>
                
                
                    <label>Too busy</label>
                
                </value>
            
                <value>
                
                    <fullName>Wait Time</fullName>
                
                
                    <label>Wait Time</label>
                
                </value>
            
                <value>
                
                    <fullName>Go off the grid</fullName>
                
                
                    <label>Go off the grid</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>