force-app/main/default/objects/Lead/fields/Obtained_Utility_Data__c.field-meta.xml
<CustomField>
    <fullName>Obtained_Utility_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obtained Utility Data?</label>
    <type>Checkbox</type>
</CustomField>