force-app/main/default/objects/Lead/fields/Other_Bank_Executive__c.field-meta.xml
<CustomField>
    <fullName>Other_Bank_Executive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is borrower or co-borrower an executive officer or director of another institution?</description>
    <inlineHelpText>Reg O Question. Is borrower or co-borrower an executive officer or director of another institution?</inlineHelpText>
    <label>Other Bank Executive?</label>
    <type>Checkbox</type>
</CustomField>