force-app/main/default/objects/Lead/fields/Parcel_City__c.field-meta.xml
<CustomField>
    <fullName>Parcel_City__c</fullName>
    <label>Parcel City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>