force-app/main/default/objects/Lead/fields/Parcel_State__c.field-meta.xml
<CustomField>
    <fullName>Parcel_State__c</fullName>
    <label>Parcel State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>