force-app/main/default/objects/Lead/fields/Parcel_Street__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Street__c</fullName>
    <description>Street Address of Land Parcel</description>
    <label>Parcel Street (If Different)</label>
    <type>TextArea</type>
</CustomField>