force-app/main/default/objects/Lead/fields/Parcel_Zip__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Zip__c</fullName>
    <description>Set at least by Form Assembly forms (e.g. 381607)</description>
    <label>Parcel Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>