force-app/main/default/objects/Lead/fields/parent_account_id__c.field-meta.xml
<CustomField>
    <fullName>parent_account_id__c</fullName>
    <label>Parent Account ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>