force-app/main/default/objects/Lead/fields/Parent_AccountId__c.field-meta.xml
<CustomField>
    <fullName>Parent_AccountId__c</fullName>
    <formula>Parent_Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent AccountId</label>
    <type>Text</type>
</CustomField>