force-app/main/default/objects/Lead/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to relate the Partner Account to the Leads. Can be filtered to be the Account for the related Partner Record</description>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Partner Account)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>