force-app/main/default/objects/Lead/fields/Partner_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Application_Status__c</fullName>
    <description>This field will display to partners in the partner portal</description>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Application Started</fullName>
                
                
                    <label>Application Started</label>
                
                </value>
            
                <value>
                
                    <fullName>Under Review</fullName>
                
                
                    <label>Under Review</label>
                
                </value>
            
                <value>
                
                    <fullName>Additional Signature Required</fullName>
                
                
                    <label>Additional Signature Required</label>
                
                </value>
            
                <value>
                
                    <fullName>Awaiting Information Requested</fullName>
                
                
                    <label>Awaiting Information Requested</label>
                
                </value>
            
                <value>
                
                    <fullName>Expired/Unqualified</fullName>
                
                
                    <label>Expired/Unqualified</label>
                
                </value>
            
                <value>
                
                    <fullName>Complete</fullName>
                
                
                    <label>Complete</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>