force-app/main/default/objects/Lead/fields/Partner_Comments__c.field-meta.xml
<CustomField>
    <fullName>Partner_Comments__c</fullName>
    <inlineHelpText>Comments entered by partner during customer enrollment</inlineHelpText>
    <label>Partner Comments</label>
    <type>TextArea</type>
</CustomField>