force-app/main/default/objects/Lead/fields/Partner_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Partner_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>