force-app/main/default/objects/Lead/fields/Partner_Sent_Co_Signer_Link__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sent_Co_Signer_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For use in SLPortal : When a partner hits the &quot;Add a Co-Signer&quot; button and sends the customer a link to add a cosigner, this box is checked.</inlineHelpText>
    <label>Partner Sent Co-Signer Link</label>
    <type>Checkbox</type>
</CustomField>