force-app/main/default/objects/Lead/fields/Partner_Tag__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tag__c</fullName>
    <label>Partner Tag</label>
    <length>35</length>
    <type>Text</type>
</CustomField>