force-app/main/default/objects/Lead/fields/PCR_Percentile__c.field-meta.xml
<CustomField>
    <fullName>PCR_Percentile__c</fullName>
    <formula>Personal_Credit_Report__r.LASERCA__Ranking__c</formula>
    <label>PCR Percentile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>