force-app/main/default/objects/Lead/fields/PCR_Relationship__c.field-meta.xml
<CustomField>
    <fullName>PCR_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PCR Relationship</label>
    <referenceTo>LASERCA__Personal_Credit_Report__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>