force-app/main/default/objects/Lead/fields/PCR_Test__c.field-meta.xml
<CustomField>
    <fullName>PCR_Test__c</fullName>
    <label>PCR Test</label>
    <length>10</length>
    <type>Text</type>
</CustomField>