force-app/main/default/objects/Lead/fields/Personal_Credit_Report__c.field-meta.xml
<CustomField>
    <fullName>Personal_Credit_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Credit Report</label>
    <referenceTo>LASERCA__Personal_Credit_Report__c</referenceTo>
    <relationshipLabel>Leads (Personal Credit Report)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>