force-app/main/default/objects/Lead/fields/Phone2__c.field-meta.xml
<CustomField>
    <fullName>Phone2__c</fullName>
    <formula>BLANKVALUE(MobilePhone, Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to map the Lead&apos;s phone number to Opportunity.Customer Phone (since standard fields can&apos;t be mapped)</inlineHelpText>
    <label>Phone2</label>
    <type>Text</type>
</CustomField>