force-app/main/default/objects/Lead/fields/Phone_Number_Contract__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Contract__c</fullName>
    <description>This field is used in the SSF Conga template. It returns the business phone if they are non resi, and mobile phone if resi.</description>
    <formula>CASE(Customer_type__c,
&quot;Residential&quot;,MobilePhone, 
&quot;Non-Residential&quot;,Business_Phone__c,
MobilePhone
)</formula>
    <inlineHelpText>This field is used in the SSF Conga template. It returns the business phone if they are non resi, and mobile phone if resi.</inlineHelpText>
    <label>Phone Number (Contract)</label>
    <type>Text</type>
</CustomField>