force-app/main/default/objects/Lead/fields/Phone_or_emal__c.field-meta.xml
<CustomField>
    <fullName>Phone_or_emal__c</fullName>
    <description>Would you like to be contacted by phone or email?</description>
    <label>Phone or email?</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Phone</fullName>
                
                
                    <label>Phone</label>
                
                </value>
            
                <value>
                
                    <fullName>Email</fullName>
                
                
                    <label>Email</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>