force-app/main/default/objects/Lead/fields/Pitched__c.field-meta.xml
<CustomField>
    <fullName>Pitched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Sales to signify they have been able to give someone a full sales pitch.</description>
    <inlineHelpText>Used by Sales to signify they have been able to give someone a full sales pitch.</inlineHelpText>
    <label>Pitched</label>
    <type>Checkbox</type>
</CustomField>