force-app/main/default/objects/Lead/fields/PreApproval_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>PreApproval_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PreApproval Email Sent</label>
    <type>Checkbox</type>
</CustomField>