force-app/main/default/objects/Lead/fields/Preliminary_Partner__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preliminary Partner</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Leads (Preliminary Partner)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>