force-app/main/default/objects/Lead/fields/Previous_BW_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Previous_BW_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previous BW Applicant?</label>
    <type>Checkbox</type>
</CustomField>