force-app/main/default/objects/Lead/fields/Processed_By__c.field-meta.xml
<CustomField>
    <fullName>Processed_By__c</fullName>
    <label>Processed By</label>
    <length>25</length>
    <type>Text</type>
</CustomField>