force-app/main/default/objects/Lead/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <inlineHelpText>Maps product interest from website lead generation form</inlineHelpText>
    <label>Product Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signing up for community solar</fullName>
            </value>
            <value>
                <fullName>Solar for my commercial property</fullName>
            </value>
            <value>
                <fullName>Financing my solar system</fullName>
            </value>
            <value>
                <fullName>Providing solar financing</fullName>
            </value>
            <value>
                <fullName>Selling community solar</fullName>
            </value>
            <value>
                <fullName>Community Solar services</fullName>
                <label>Community solar services</label>
            </value>
            <value>
                <fullName>Developing a solar farm</fullName>
            </value>
            <value>
                <fullName>Joining the BlueWave team</fullName>
            </value>
            <value>
                <fullName>Something else...</fullName>
            </value>
            <value>
                <fullName>Community Solar sales</fullName>
                <isActive>false</isActive>
                <label>Community Solar sales</label>
            </value>
            <value>
                <fullName>Developing Solar</fullName>
                <isActive>false</isActive>
                <label>Developing Solar</label>
            </value>
            <value>
                <fullName>Providing rooftop solar financing</fullName>
                <isActive>false</isActive>
                <label>Providing rooftop solar financing</label>
            </value>
            <value>
                <fullName>Solar for my business</fullName>
                <isActive>false</isActive>
                <label>Solar for my business</label>
            </value>
            <value>
                <fullName>Solar for my home</fullName>
                <isActive>false</isActive>
                <label>Solar for my home</label>
            </value>
            <value>
                <fullName>Solar for my land</fullName>
                <isActive>false</isActive>
                <label>Solar for my land</label>
            </value>
            <value>
                <fullName>Solar project development</fullName>
                <isActive>false</isActive>
                <label>Solar project development</label>
            </value>
            <value>
                <fullName>Something else</fullName>
                <isActive>false</isActive>
                <label>Something else</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>