force-app/main/default/objects/Lead/fields/Product_line__c.field-meta.xml
<CustomField>
    <fullName>Product_line__c</fullName>
    <label>Product Line</label>
    <length>50</length>
    <type>Text</type>
</CustomField>