force-app/main/default/objects/Lead/fields/Product_Line_Account_Map__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Account_Map__c</fullName>
    <formula>Product_line__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line (Account Map)</label>
    <type>Text</type>
</CustomField>