force-app/main/default/objects/Lead/fields/Product_Program__c.field-meta.xml
<CustomField>
    <fullName>Product_Program__c</fullName>
    <description>This designates what program the customer&apos;s product is a part of. It gets its value from the product record relates to this lead. An example would be Perch&apos;s Solar Loan took part in the Massachusetts Solar Loan Program so the program would be MSLP.</description>
    <inlineHelpText>This designates what program the customer&apos;s product is a part of. It gets its value from the product record relates to this lead. An example would be Perch&apos;s Solar Loan took part in the Massachusetts Solar Loan Program so the program would be MSLP.</inlineHelpText>
    <label>Product Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BlueWave Solar Loan</fullName>
            </value>
            <value>
                <fullName>MSLP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>