force-app/main/default/objects/Lead/fields/Project_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Identification_Number__c</fullName>
    <label>Project Identification Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>