force-app/main/default/objects/Lead/fields/Proposed_EPC_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Proposed_EPC_Pricing__c</fullName>
    <description>Collected in C&amp;I in-take form</description>
    <inlineHelpText>Collected in C&amp;I in-take form</inlineHelpText>
    <label>Proposed EPC Pricing</label>
    <length>80</length>
    <type>Text</type>
</CustomField>