force-app/main/default/objects/Lead/fields/Qualified_Business__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Business__c</fullName>
    <formula>IF(AND(Risk_Level_Business_Type__c = &quot;Risky&quot;, VALUE(Number_of_Years_at_Location__c) &gt;= 2, VALUE(Number_of_Years_in_Business__c) &gt;= 3), &quot;Qualified&quot;, 
IF(AND(Risk_Level_Business_Type__c = &quot;Not Risky&quot;, VALUE(Number_of_Years_at_Location__c) &gt;= 2, VALUE(Number_of_Years_in_Business__c) &gt;= 1), &quot;Qualified&quot;, 

&quot;Disqualified&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualified Business?</label>
    <type>Text</type>
</CustomField>